# mnist_mwe

./: Cargo.toml  README.md
src/: data.rs  main.rs  model.rs
