[package]
name = "burn_mnist"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.18.0", features = ["std", "tui", "train", "vision", "wgpu", "fusion", "ndarray"], default-features = false }
# burn = { git = "https://github.com/tracel-ai/burn", features = ["std", "tui", "train", "vision", "wgpu", "fusion", "ndarray"], default-features = false }


[features]
wgpu = []
